--- a/src/theme/css/frontend/_tile.scss
+++ b/src/theme/css/frontend/_tile.scss
@@ -83,9 +83,16 @@
 	}
 
 	&-container {
-		grid-template-columns: repeat(3, minmax(0, rem-calc(355px)));
+		@apply justify-center;
+		grid-template-columns: repeat(2, minmax(0, rem-calc(355px)));
 	}
   }
+
+	@screen xl {
+		&-container {
+			grid-template-columns: repeat(3, minmax(0, rem-calc(395px)));
+		}
+	}
 }
 
 .tile {
@@ -175,4 +182,8 @@
 	  @apply text-px20 leading-px26;
 	}
   }
+
+	@screen xl {
+		max-width: rem-calc(395px);
+	}
 }
